# ade

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/skills/changelog-generator/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/ztracing/: Cargo.toml
crates/ztracing/src/: lib.rs
crates/ztracing_macro/: Cargo.toml
design/: icon.pen
scripts/: bootstrap-zig.sh  bundle-macos.sh  create-dmg.sh
src/: assets.rs  input.rs  key_encode.rs  main.rs  menu.rs  settings.rs  settings_modal.rs  terminal.rs  terminal_element.rs  terminal_view.rs  toolbar.rs
src/code_review/: commit_list.rs  diff_view.rs  file_list.rs  intra_line.rs  mod.rs  text_selection.rs
src/git/: mod.rs  provider.rs  types.rs
src/panes/: divider.rs  mod.rs  tree.rs
src/syntax/: highlighter.rs  languages.rs  mod.rs  theme.rs
src/tabs/: mod.rs  process_info.rs  tab_bar.rs
src/theme/: colors.rs  mod.rs  spacing.rs  typography.rs
