[package]
name = "ade"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
gpui_ghostty_terminal = { path = "vendor/gpui-ghostty/crates/gpui_ghostty_terminal" }
portable-pty = "0.9"
git2 = "0.20"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
