[package]
name = "ade"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
git2 = { version = "0.20", default-features = false }
chrono = "0.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
alacritty_terminal = "0.25.1"
futures = "0.3"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
