[package]
name = "ade"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "cff3ac6f93f506330034652f0d2389591bfb45a0", package = "gpui" }
git2 = { version = "0.20", default-features = false }
chrono = "0.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
alacritty_terminal = "0.25.1"
futures = "0.3"
unicode-width = "0.2"

# Tree-sitter core (pin to 0.25.x)
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"

# Language grammars (~10 languages, 14 crates)
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"

[dev-dependencies]
tempfile = "3"
